--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </head>
   <body class="font-brand bg-gray-50 text-gray-900">
     <!-- Header / Hero -->
-    <header class="bg-gradient-to-br from-brand-600 to-purple-600 text-white">
+    <header class="bg-fall-100 text-black border-b border-fall-200">
       <div class="max-w-6xl mx-auto px-6 py-12">
         <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight">
           Kempner Lunch & Learn
@@ -53,7 +53,7 @@
           A student-organized lunchtime seminar at the Kempner Institute.
         </p>
         <nav class="mt-6 flex flex-wrap gap-3">
-          <a href="#fall-2024" class="inline-block bg-white/10 hover:bg-white/20 px-4 py-2 rounded-xl text-sm">Fall 2024</a>
+          <a href="#fall-2024" class="inline-block bg-white border border-fall>Fall 2024</a>
           <a href="#spring-2025" class="inline-block bg-white/10 hover:bg-white/20 px-4 py-2 rounded-xl text-sm">Spring 2025</a>
           <a href="#summer-2025" class="inline-block bg-white/10 hover:bg-white/20 px-4 py-2 rounded-xl text-sm">Summer 2025</a>
           <a href="#fall-2025" class="inline-block bg-white/10 hover:bg-white/20 px-4 py-2 rounded-xl text-sm">Fall 2025</a>
@@ -579,4 +579,6 @@
     <footer class="max-w-6xl mx-auto px-6 pb-10 text-sm text-gray-500">
       <p>&copy; <span id="year"></span> Kempner Lunch & Learn. Built with GitHub Pages.</p>
     </footer>
+
     <script>
+      // tiny helper to keep the year current
