--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           A student-organized lunchtime seminar at the Kempner Institute.
         </p>
         <nav class="mt-6 flex flex-wrap gap-3">
-          <a href="#fall-2024" class="inline-block bg-white border border-fall>Fall 2024</a>
+          <a href="#fall-2024" class="inline-block bg-white/10 hover:bg-white/20 px-4 py-2 rounded-xl text-sm"> Fall 2024 </a>
           <a href="#spring-2025" class="inline-block bg-white/10 hover:bg-white/20 px-4 py-2 rounded-xl text-sm">Spring 2025</a>
           <a href="#summer-2025" class="inline-block bg-white/10 hover:bg-white/20 px-4 py-2 rounded-xl text-sm">Summer 2025</a>
           <a href="#fall-2025" class="inline-block bg-white/10 hover:bg-white/20 px-4 py-2 rounded-xl text-sm">Fall 2025</a>
@@ -80,7 +80,6 @@
             <h2 class="text-2xl sm:text-3xl font-bold">Fall 2024</h2>
             <span class="text-sm text-gray-500">7 sessions</span>
           </div>
-          <div class="text-sm inline-flex items-center px-3 py-1 rounded-full bg-fall-50 text-fall-700 border border-fall-200">Season color: Fall</div>
         </div>
         <div class="rounded-2xl p-3 bg-fall-50 border border-fall-100">
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -178,7 +177,6 @@
             <h2 class="text-2xl sm:text-3xl font-bold">Spring 2025</h2>
             <span class="text-sm text-gray-500">8 sessions</span>
           </div>
-          <div class="text-sm inline-flex items-center px-3 py-1 rounded-full bg-spring-50 text-spring-700 border border-spring-200">Season color: Spring</div>
         </div>
         <div class="rounded-2xl p-3 bg-spring-50 border border-spring-100">
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -206,19 +204,6 @@
               </div>
             </article>
 
-            <!-- 02/24/25 (Open) -->
-            <article class="bg-white rounded-2xl shadow p-6 flex flex-col border-2 border-dashed">
-              <div class="flex items-center justify-between">
-                <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-semibold bg-spring-100 text-spring-800">02/24/25</span>
-                <span class="text-xs text-spring-700 font-semibold">Open slot</span>
-              </div>
-              <h3 class="mt-4 text-lg font-semibold">TBD</h3>
-              <p class="mt-2 text-sm text-gray-700">Interested in presenting? <a class="text-brand-600 hover:underline" href="https://docs.google.com/spreadsheets/d/1YBsN9rFkraL0O7cRIZZJGsboYFvK_jJRmf9HXzmaruU/edit?usp=sharing">Claim this slot</a>.</p>
-              <div class="mt-4 pt-4 border-t">
-                <span class="inline-flex items-center px-3 py-2 rounded-lg text-sm font-medium bg-gray-100 text-gray-500">Notes (n/a)</span>
-              </div>
-            </article>
-
             <!-- 03/11/25 -->
             <article class="bg-white rounded-2xl shadow p-6 flex flex-col">
               <div class="flex items-center justify-between">
@@ -231,25 +216,12 @@
               </div>
             </article>
 
-            <!-- 03/25/25 (Open) -->
-            <article class="bg-white rounded-2xl shadow p-6 flex flex-col border-2 border-dashed">
-              <div class="flex items-center justify-between">
-                <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-semibold bg-spring-100 text-spring-800">03/25/25</span>
-                <span class="text-xs text-spring-700 font-semibold">Open slot</span>
-              </div>
-              <h3 class="mt-4 text-lg font-semibold">TBD</h3>
-              <p class="mt-2 text-sm text-gray-700">Interested in presenting? <a class="text-brand-600 hover:underline" href="https://docs.google.com/spreadsheets/d/1YBsN9rFkraL0O7cRIZZJGsboYFvK_jJRmf9HXzmaruU/edit?usp=sharing">Claim this slot</a>.</p>
-              <div class="mt-4 pt-4 border-t">
-                <span class="inline-flex items-center px-3 py-2 rounded-lg text-sm font-medium bg-gray-100 text-gray-500">Notes (n/a)</span>
-              </div>
-            </article>
-
             <!-- 04/08/25 -->
             <article class="bg-white rounded-2xl shadow p-6 flex flex-col">
               <div class="flex items-center justify-between">
                 <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-semibold bg-spring-100 text-spring-800">04/08/25</span>
               </div>
-              <h3 class="mt-4 text-lg font-semibold">TBD</h3>
+              <h3 class="mt-4 text-lg font-semibold">Attention in Language Transformers</h3>
               <p class="mt-2 text-sm text-gray-700">Victoria Li — <a class="text-brand-600 hover:underline" href="mailto:vrli@college.harvard.edu">vrli@college.harvard.edu</a></p>
               <div class="mt-4 pt-4 border-t">
                 <a href="#" aria-disabled="true" class="inline-flex items-center px-3 py-2 rounded-lg text-sm font-medium bg-gray-200 text-gray-600 pointer-events-none opacity-60">Notes (TBD)</a>
@@ -290,7 +262,6 @@
             <h2 class="text-2xl sm:text-3xl font-bold">Summer 2025</h2>
             <span class="text-sm text-gray-500">8 sessions</span>
           </div>
-          <div class="text-sm inline-flex items-center px-3 py-1 rounded-full bg-summer-50 text-summer-700 border border-summer-200">Season color: Summer</div>
         </div>
         <div class="rounded-2xl p-3 bg-summer-50 border border-summer-100">
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -306,19 +277,6 @@
               </div>
             </article>
 
-            <!-- 06/25/25 (Open) -->
-            <article class="bg-white rounded-2xl shadow p-6 flex flex-col border-2 border-dashed">
-              <div class="flex items-center justify-between">
-                <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-semibold bg-summer-100 text-summer-800">06/25/25</span>
-                <span class="text-xs text-summer-700 font-semibold">Open slot</span>
-              </div>
-              <h3 class="mt-4 text-lg font-semibold">TBD</h3>
-              <p class="mt-2 text-sm text-gray-700">Interested in presenting? <a class="text-brand-600 hover:underline" href="https://docs.google.com/spreadsheets/d/1YBsN9rFkraL0O7cRIZZJGsboYFvK_jJRmf9HXzmaruU/edit?usp=sharing">Claim this slot</a>.</p>
-              <div class="mt-4 pt-4 border-t">
-                <span class="inline-flex items-center px-3 py-2 rounded-lg text-sm font-medium bg-gray-100 text-gray-500">Notes (n/a)</span>
-              </div>
-            </article>
-
             <!-- 07/02/25 -->
             <article class="bg-white rounded-2xl shadow p-6 flex flex-col">
               <div class="flex items-center justify-between">
@@ -328,19 +286,6 @@
               <p class="mt-2 text-sm text-gray-700">Binxu Wang — <a class="text-brand-600 hover:underline" href="mailto:binxu_wang@hms.harvard.edu">binxu_wang@hms.harvard.edu</a></p>
               <div class="mt-4 pt-4 border-t">
                 <a href="#" aria-disabled="true" class="inline-flex items-center px-3 py-2 rounded-lg text-sm font-medium bg-gray-200 text-gray-600 pointer-events-none opacity-60">Notes (TBD)</a>
-              </div>
-            </article>
-
-            <!-- 07/09/25 (Open) -->
-            <article class="bg-white rounded-2xl shadow p-6 flex flex-col border-2 border-dashed">
-              <div class="flex items-center justify-between">
-                <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-semibold bg-summer-100 text-summer-800">07/09/25</span>
-                <span class="text-xs text-summer-700 font-semibold">Open slot</span>
-              </div>
-              <h3 class="mt-4 text-lg font-semibold">TBD</h3>
-              <p class="mt-2 text-sm text-gray-700">Interested in presenting? <a class="text-brand-600 hover:underline" href="https://docs.google.com/spreadsheets/d/1YBsN9rFkraL0O7cRIZZJGsboYFvK_jJRmf9HXzmaruU/edit?usp=sharing">Claim this slot</a>.</p>
-              <div class="mt-4 pt-4 border-t">
-                <span class="inline-flex items-center px-3 py-2 rounded-lg text-sm font-medium bg-gray-100 text-gray-500">Notes (n/a)</span>
               </div>
             </article>
 
@@ -356,19 +301,6 @@
               </div>
             </article>
 
-            <!-- 07/23/25 (Open) -->
-            <article class="bg-white rounded-2xl shadow p-6 flex flex-col border-2 border-dashed">
-              <div class="flex items-center justify-between">
-                <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-semibold bg-summer-100 text-summer-800">07/23/25</span>
-                <span class="text-xs text-summer-700 font-semibold">Open slot</span>
-              </div>
-              <h3 class="mt-4 text-lg font-semibold">TBD</h3>
-              <p class="mt-2 text-sm text-gray-700">Interested in presenting? <a class="text-brand-600 hover:underline" href="https://docs.google.com/spreadsheets/d/1YBsN9rFkraL0O7cRIZZJGsboYFvK_jJRmf9HXzmaruU/edit?usp=sharing">Claim this slot</a>.</p>
-              <div class="mt-4 pt-4 border-t">
-                <span class="inline-flex items-center px-3 py-2 rounded-lg text-sm font-medium bg-gray-100 text-gray-500">Notes (n/a)</span>
-              </div>
-            </article>
-
             <!-- 07/30/25 -->
             <article class="bg-white rounded-2xl shadow p-6 flex flex-col">
               <div class="flex items-center justify-between">
@@ -381,18 +313,6 @@
               </div>
             </article>
 
-            <!-- 08/06/25 (Open) -->
-            <article class="bg-white rounded-2xl shadow p-6 flex flex-col border-2 border-dashed">
-              <div class="flex items-center justify-between">
-                <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-semibold bg-summer-100 text-summer-800">08/06/25</span>
-                <span class="text-xs text-summer-700 font-semibold">Open slot</span>
-              </div>
-              <h3 class="mt-4 text-lg font-semibold">TBD</h3>
-              <p class="mt-2 text-sm text-gray-700">Interested in presenting? <a class="text-brand-600 hover:underline" href="https://docs.google.com/spreadsheets/d/1YBsN9rFkraL0O7cRIZZJGsboYFvK_jJRmf9HXzmaruU/edit?usp=sharing">Claim this slot</a>.</p>
-              <div class="mt-4 pt-4 border-t">
-                <span class="inline-flex items-center px-3 py-2 rounded-lg text-sm font-medium bg-gray-100 text-gray-500">Notes (n/a)</span>
-              </div>
-            </article>
           </div>
         </div>
       </section>
@@ -404,7 +324,6 @@
             <h2 class="text-2xl sm:text-3xl font-bold">Fall 2025</h2>
             <span class="text-sm text-gray-500">Upcoming</span>
           </div>
-          <div class="text-sm inline-flex items-center px-3 py-1 rounded-full bg-fall-50 text-fall-700 border border-fall-200">Season color: Fall</div>
         </div>
         <div class="rounded-2xl p-3 bg-fall-50 border border-fall-100">
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -455,19 +374,6 @@
               <p class="mt-2 text-sm text-gray-700">Ilenna Jones — <a class="text-brand-600 hover:underline" href="mailto:ijones@g.harvard.edu">ijones@g.harvard.edu</a></p>
               <div class="mt-4 pt-4 border-t">
                 <a href="#" aria-disabled="true" class="inline-flex items-center px-3 py-2 rounded-lg text-sm font-medium bg-gray-200 text-gray-600 pointer-events-none opacity-60">Notes (TBD)</a>
-              </div>
-            </article>
-
-            <!-- 09/30/25 ICLR DEADLINE (blocked) -->
-            <article class="bg-white rounded-2xl shadow p-6 flex flex-col opacity-80">
-              <div class="flex items-center justify-between">
-                <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-semibold bg-fall-100 text-fall-800">09/30/25</span>
-                <span class="text-xs text-gray-600 font-semibold">No meeting</span>
-              </div>
-              <h3 class="mt-4 text-lg font-semibold">ICLR Deadline</h3>
-              <p class="mt-2 text-sm text-gray-600">—</p>
-              <div class="mt-4 pt-4 border-t">
-                <span class="inline-flex items-center px-3 py-2 rounded-lg text-sm font-medium bg-gray-100 text-gray-500">Notes (n/a)</span>
               </div>
             </article>
 
