--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <span class="text-sm text-gray-500">7 sessions</span>
           </div>
         </div>
-        <div class="rounded-2xl p-3 bg-orange-100 border border-orange-100">
+        <div class="rounded-2xl p-3 bg-gray-100 border border-gray-200">
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- 09/09/24 -->
             <article class="bg-white rounded-2xl shadow p-6">
@@ -144,7 +144,7 @@
             <span class="text-sm text-gray-500">8 sessions</span>
           </div>
         </div>
-        <div class="rounded-2xl p-3 bg-yellow-50 border border-yellow-100">
+        <div class="rounded-2xl p-3 bg-gray-100 border border-gray-200">
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- 01/27/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
@@ -217,7 +217,7 @@
             <span class="text-sm text-gray-500">8 sessions</span>
           </div>
         </div>
-        <div class="rounded-2xl p-3 bg-lightBlue-100 border border-lightBlue-100">
+        <div class="rounded-2xl p-3 bg-gray-100 border border-gray-200">
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- 06/18/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
@@ -270,7 +270,7 @@
             <span class="text-sm text-gray-500">Upcoming</span>
           </div>
         </div>
-        <div class="rounded-2xl p-3 bg-orange-100 border border-orange-100">
+        <div class="rounded-2xl p-3 bg-gray-100 border border-gray-200">
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- 09/02/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
