--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!-- 09/09/24 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">09/09/24</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">09/09/24</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Minimizing Stress and Maximizing Focus: Deep Work and Organization</h3>
               <p class="mt-2 text-sm text-gray-700">Ilenna Jones — <a class="text-red-700 hover:underline" href="mailto:ijones@g.harvard.edu">ijones@g.harvard.edu</a></p>
@@ -76,7 +76,7 @@
             <!-- 09/23/24 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">09/23/24</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">09/23/24</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">The Biological Complexity of Synapses</h3>
               <p class="mt-2 text-sm text-gray-700">Maceo Richards — <a class="text-red-700 hover:underline" href="mailto:mrichards@g.harvard.edu">mrichards@g.harvard.edu</a></p>
@@ -86,7 +86,7 @@
             <!-- 10/07/24 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">10/07/24</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">10/07/24</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Biologically Plausible Models</h3>
               <p class="mt-2 text-sm text-gray-700">Leilany Torres-Diaz — <a class="text-red-700 hover:underline" href="mailto:leilany_torresdiaz@g.harvard.edu">leilany_torresdiaz@g.harvard.edu</a></p>
@@ -96,7 +96,7 @@
             <!-- 10/21/24 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">10/21/24</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">10/21/24</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Games and Multi-Agent Systems</h3>
               <p class="mt-2 text-sm text-gray-700">Aaron Walsman — <a class="text-red-700 hover:underline" href="mailto:aaronwalsman@g.harvard.edu">aaronwalsman@g.harvard.edu</a></p>
@@ -106,7 +106,7 @@
             <!-- 11/04/24 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">11/04/24</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">11/04/24</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Equivariant Neural Networks</h3>
               <p class="mt-2 text-sm text-gray-700">Emma Finn — <a class="text-red-700 hover:underline" href="mailto:efinn@college.harvard.edu">efinn@college.harvard.edu</a></p>
@@ -116,7 +116,7 @@
             <!-- 11/18/24 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">11/18/24</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">11/18/24</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Information Theory</h3>
               <p class="mt-2 text-sm text-gray-700">George Cai — <a class="text-red-700 hover:underline" href="mailto:georgecai@g.harvard.edu">georgecai@g.harvard.edu</a></p>
@@ -126,7 +126,7 @@
             <!-- 12/02/24 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">12/02/24</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">12/02/24</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Neuromorphic Systems for Machine Learning</h3>
               <p class="mt-2 text-sm text-gray-700">Jason Yik — <a class="text-red-700 hover:underline" href="mailto:jyik@g.harvard.edu">jyik@g.harvard.edu</a></p>
@@ -149,7 +149,7 @@
             <!-- 01/27/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-yellow-200 text-yellow-900">01/27/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-yellow-900">01/27/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Diffusion Models</h3>
               <p class="mt-2 text-sm text-gray-700">Emma Finn — <a class="text-red-700 hover:underline" href="mailto:efinn@college.harvard.edu">efinn@college.harvard.edu</a></p>
@@ -159,7 +159,7 @@
             <!-- 02/10/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-yellow-200 text-yellow-900">02/10/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-yellow-900">02/10/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Test Time Compute</h3>
               <p class="mt-2 text-sm text-gray-700">Emmanuel Rassou — <a class="text-red-700 hover:underline" href="mailto:emmanuel_rassou@college.harvard.edu">emmanuel_rassou@college.harvard.edu</a></p>
@@ -169,7 +169,7 @@
             <!-- 03/11/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-yellow-200 text-yellow-900">03/11/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-yellow-900">03/11/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Dendritic Computation</h3>
               <p class="mt-2 text-sm text-gray-700">Ilenna Jones — <a class="text-red-700 hover:underline" href="mailto:ijones@g.harvard.edu">ijones@g.harvard.edu</a></p>
@@ -179,7 +179,7 @@
             <!-- 04/08/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-yellow-200 text-yellow-900">04/08/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-yellow-900">04/08/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Attention in Language Transformers</h3>
               <p class="mt-2 text-sm text-gray-700">Victoria Li — <a class="text-red-700 hover:underline" href="mailto:vrli@college.harvard.edu">vrli@college.harvard.edu</a></p>
@@ -189,7 +189,7 @@
             <!-- 04/22/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-yellow-200 text-yellow-900">04/22/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-yellow-900">04/22/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">A primer into second-order optimization</h3>
               <p class="mt-2 text-sm text-gray-700">Rachit Bansal — <a class="text-red-700 hover:underline" href="mailto:rachitbansal@g.harvard.edu">rachitbansal@g.harvard.edu</a></p>
@@ -199,7 +199,7 @@
             <!-- 05/13/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-yellow-200 text-yellow-900">05/13/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-yellow-900">05/13/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Zeroth-order optimization</h3>
               <p class="mt-2 text-sm text-gray-700">Aaron Walsman — <a class="text-red-700 hover:underline" href="mailto:aaronwalsman@g.harvard.edu">aaronwalsman@g.harvard.edu</a></p>
@@ -222,7 +222,7 @@
             <!-- 06/18/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-lightBlue-300 text-lightBlue-900">06/18/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-lightBlue-900">06/18/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Creativity in Diffusion</h3>
               <p class="mt-2 text-sm text-gray-700">Emma Finn — <a class="text-red-700 hover:underline" href="mailto:efinn@college.harvard.edu">efinn@college.harvard.edu</a></p>
@@ -232,7 +232,7 @@
             <!-- 07/02/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-lightBlue-300 text-lightBlue-900">07/02/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-lightBlue-900">07/02/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">A Friendly Guide to Random Matrix Theory and Its Application</h3>
               <p class="mt-2 text-sm text-gray-700">Binxu Wang — <a class="text-red-700 hover:underline" href="mailto:binxu_wang@hms.harvard.edu">binxu_wang@hms.harvard.edu</a></p>
@@ -242,7 +242,7 @@
             <!-- 07/16/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-lightBlue-300 text-lightBlue-900">07/16/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-lightBlue-900">07/16/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">How do humans learn language?</h3>
               <p class="mt-2 text-sm text-gray-700">Alex Cai — <a class="text-red-700 hover:underline" href="mailto:adzcai@g.harvard.edu">adzcai@g.harvard.edu</a></p>
@@ -252,7 +252,7 @@
             <!-- 07/30/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-lightBlue-300 text-lightBlue-900">07/30/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-lightBlue-900">07/30/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Mesa-Optimisation in Transformers</h3>
               <p class="mt-2 text-sm text-gray-700">Vincent Song — <a class="text-red-700 hover:underline" href="mailto:yidingsong@college.harvard.edu">yidingsong@college.harvard.edu</a></p>
@@ -275,7 +275,7 @@
             <!-- 09/02/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">09/02/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">09/02/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">neural manifolds, intuitions and applications</h3>
               <p class="mt-2 text-sm text-gray-700">David Behery — <a class="text-red-700 hover:underline" href="mailto:davidbehery@g.harvard.edu">davidbehery@g.harvard.edu</a></p>
@@ -285,7 +285,7 @@
             <!-- 09/09/25 (Open) -->
             <article class="bg-white rounded-2xl shadow p-6 border-2 border-dashed">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">09/09/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">09/09/25</span>
                 <span class="text-xs text-orange-800 font-semibold">Open slot</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">TBD</h3>
@@ -296,7 +296,7 @@
             <!-- 09/16/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">09/16/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">09/16/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">A quick skim of current VLMs</h3>
               <p class="mt-2 text-sm text-gray-700">Cindy Luo — <a class="text-red-700 hover:underline" href="mailto:kexinluo@g.harvard.edu">kexinluo@g.harvard.edu</a></p>
@@ -306,7 +306,7 @@
             <!-- 09/23/25 (TBD; may move) -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">09/23/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">09/23/25</span>
                 <span class="text-xs text-orange-800 font-semibold">May move</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">TBD</h3>
@@ -317,7 +317,7 @@
             <!-- 09/30/25 (ICLR) -->
             <article class="bg-white rounded-2xl shadow p-6 opacity-90">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">09/30/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">09/30/25</span>
                 <span class="text-xs text-gray-600 font-semibold">No meeting</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">ICLR Deadline</h3>
@@ -328,7 +328,7 @@
             <!-- 10/07/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">10/07/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">10/07/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Introduction to Wavelets</h3>
               <p class="mt-2 text-sm text-gray-700">Emma Finn — <a class="text-red-700 hover:underline" href="mailto:efinn@college.harvard.edu">efinn@college.harvard.edu</a></p>
@@ -338,7 +338,7 @@
             <!-- 10/14/25 (Open) -->
             <article class="bg-white rounded-2xl shadow p-6 border-2 border-dashed">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">10/14/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">10/14/25</span>
                 <span class="text-xs text-orange-800 font-semibold">Open slot</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">TBD</h3>
@@ -349,7 +349,7 @@
             <!-- 10/21/25 (Open) -->
             <article class="bg-white rounded-2xl shadow p-6 border-2 border-dashed">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">10/21/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">10/21/25</span>
                 <span class="text-xs text-orange-800 font-semibold">Open slot</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">TBD</h3>
@@ -360,7 +360,7 @@
             <!-- 10/28/25 (Open) -->
             <article class="bg-white rounded-2xl shadow p-6 border-2 border-dashed">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">10/28/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">10/28/25</span>
                 <span class="text-xs text-orange-800 font-semibold">Open slot</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">TBD</h3>
@@ -371,7 +371,7 @@
             <!-- 11/04/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">11/04/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">11/04/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">TBD</h3>
               <p class="mt-2 text-sm text-gray-700">Mozes Jacobs — <a class="text-red-700 hover:underline" href="mailto:mozesjacobs@g.harvard.edu">mozesjacobs@g.harvard.edu</a></p>
@@ -381,7 +381,7 @@
             <!-- 11/11/25 (Open) -->
             <article class="bg-white rounded-2xl shadow p-6 border-2 border-dashed">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">11/11/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">11/11/25</span>
                 <span class="text-xs text-orange-800 font-semibold">Open slot</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">TBD</h3>
@@ -392,7 +392,7 @@
             <!-- 11/18/25 (Open) -->
             <article class="bg-white rounded-2xl shadow p-6 border-2 border-dashed">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-orange-300 text-orange-900">11/18/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">11/18/25</span>
                 <span class="text-xs text-orange-800 font-semibold">Open slot</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">TBD</h3>
