--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
       </section>
 
-      <!-- ===== SPRING 2025 (yellow) ===== -->
+      <!-- ===== SPRING 2025 ===== -->
       <section id="spring-2025" class="mb-14">
         <div class="mb-6">
           <div class="flex items-end justify-between gap-4 mb-2">
@@ -149,7 +149,7 @@
             <!-- 01/27/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-yellow-900">01/27/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">01/27/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Diffusion Models</h3>
               <p class="mt-2 text-sm text-gray-700">Emma Finn — <a class="text-red-700 hover:underline" href="mailto:efinn@college.harvard.edu">efinn@college.harvard.edu</a></p>
@@ -159,7 +159,7 @@
             <!-- 02/10/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-yellow-900">02/10/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">02/10/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Test Time Compute</h3>
               <p class="mt-2 text-sm text-gray-700">Emmanuel Rassou — <a class="text-red-700 hover:underline" href="mailto:emmanuel_rassou@college.harvard.edu">emmanuel_rassou@college.harvard.edu</a></p>
@@ -169,7 +169,7 @@
             <!-- 03/11/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-yellow-900">03/11/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">03/11/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Dendritic Computation</h3>
               <p class="mt-2 text-sm text-gray-700">Ilenna Jones — <a class="text-red-700 hover:underline" href="mailto:ijones@g.harvard.edu">ijones@g.harvard.edu</a></p>
@@ -179,7 +179,7 @@
             <!-- 04/08/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-yellow-900">04/08/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">04/08/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Attention in Language Transformers</h3>
               <p class="mt-2 text-sm text-gray-700">Victoria Li — <a class="text-red-700 hover:underline" href="mailto:vrli@college.harvard.edu">vrli@college.harvard.edu</a></p>
@@ -189,7 +189,7 @@
             <!-- 04/22/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-yellow-900">04/22/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">04/22/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">A primer into second-order optimization</h3>
               <p class="mt-2 text-sm text-gray-700">Rachit Bansal — <a class="text-red-700 hover:underline" href="mailto:rachitbansal@g.harvard.edu">rachitbansal@g.harvard.edu</a></p>
@@ -199,7 +199,7 @@
             <!-- 05/13/25 -->
             <article class="bg-white rounded-2xl shadow p-6">
               <div class="flex items-center justify-between">
-                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-yellow-900">05/13/25</span>
+                <span class="px-3 py-1 rounded-full text-xs font-semibold bg-gray-300 text-gray-900">05/13/25</span>
               </div>
               <h3 class="mt-4 text-lg font-semibold">Zeroth-order optimization</h3>
               <p class="mt-2 text-sm text-gray-700">Aaron Walsman — <a class="text-red-700 hover:underline" href="mailto:aaronwalsman@g.harvard.edu">aaronwalsman@g.harvard.edu</a></p>
