--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
           <p class="mt-3 text-gray-700">
             Short, friendly research talks over lunch. Sessions run during the academic year and summer.
             Interested in presenting?
-            <a class="text-red-700 underline" href="https://docs.google.com/spreadsheets/d/1YBsN9rFkraL0O7cRIZZJGsboYFvK_jJRmf9HXzmaruU/edit?usp=sharing">Sign up here</a>.
+            <a class="text-red-700 underline" href="https://docs.google.com/spreadsheets/d/1YBsN9rFkraL0O7cRIZZJGsboYFvK_jJRmf9HXzmaruU/edit?usp=sharing">Sign up here! </a> 
+            Want to know more? Read about us <a class="text-red-700 underline" href="https://kempnerinstitute.harvard.edu/news/with-lunch-and-learn-the-kempner-offers-a-new-forum-for-knowledge-building-teaching-and-collaboration/"> here! </a> 
+
           </p>
         </div>
       </section>
