--- a/index.html
+++ b/index.html
@@ -238,7 +238,10 @@
               </div>
               <h3 class="mt-4 text-lg font-semibold">A Friendly Guide to Random Matrix Theory and Its Application</h3>
               <p class="mt-2 text-sm text-gray-700">Binxu Wang — <a class="text-red-700 hover:underline" href="mailto:binxu_wang@hms.harvard.edu">binxu_wang@hms.harvard.edu</a></p>
-              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600">Notes (TBD)</span></div>
+              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600"> 
+              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600" > <a class = "text-red-700 hover:underline" href="https://colab.research.google.com/drive/1PueRWWmo4_zErdZpQPQo1wfRZD7qFYzE?usp=sharing">Collab Notebook</a> 
+                and <a class = "text-red-700 hover:underline" href="https://colab.research.google.com/drive/1PueRWWmo4_zErdZpQPQo1wfRZD7qFYzE?usp=sharing"> tutorial notes </a> </span></div>
+              </span></div>
             </article>
 
             <!-- 07/16/25 -->
@@ -248,7 +251,7 @@
               </div>
               <h3 class="mt-4 text-lg font-semibold">How do humans learn language?</h3>
               <p class="mt-2 text-sm text-gray-700">Alex Cai — <a class="text-red-700 hover:underline" href="mailto:adzcai@g.harvard.edu">adzcai@g.harvard.edu</a></p>
-              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600">Notes (TBD)</span></div>
+              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600" > <a class = "text-red-700 hover:underline" href="https://notes.adzc.ai/projects/2025-07-16+Kempner+lunch+and+learn+linguistics+talk">Notes</a> </span></div>
             </article>
 
             <!-- 07/30/25 -->
