--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               </div>
               <h3 class="mt-4 text-lg font-semibold">Minimizing Stress and Maximizing Focus: Deep Work and Organization</h3>
               <p class="mt-2 text-sm text-gray-700">Ilenna Jones — <a class="text-red-700 hover:underline" href="mailto:ijones@g.harvard.edu">ijones@g.harvard.edu</a></p>
-              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600">Notes (TBD)</span></div>
+              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600" > <a class = "text-red-700 hover:underline" href="https://github.com/LunchAndLearnKempner/lunchandlearnKempner.github.io/blob/main/LnL_Deep-work-organization_Ilenna-Jones.pdf">Notes</a> </span></div>
             </article>
 
             <!-- 09/23/24 -->
@@ -112,7 +112,7 @@
               </div>
               <h3 class="mt-4 text-lg font-semibold">Equivariant Neural Networks</h3>
               <p class="mt-2 text-sm text-gray-700">Emma Finn — <a class="text-red-700 hover:underline" href="mailto:efinn@college.harvard.edu">efinn@college.harvard.edu</a></p>
-              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600">Notes (TBD)</span></div>
+              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600" > <a class = "text-red-700 hover:underline" href="https://github.com/LunchAndLearnKempner/lunchandlearnKempner.github.io/blob/main/Introduction%20to%20Group%20Equivariant%20Neural%20Networks!.pdf">Notes</a> </span></div> 
             </article>
 
             <!-- 11/18/24 -->
@@ -155,7 +155,7 @@
               </div>
               <h3 class="mt-4 text-lg font-semibold">Diffusion Models</h3>
               <p class="mt-2 text-sm text-gray-700">Emma Finn — <a class="text-red-700 hover:underline" href="mailto:efinn@college.harvard.edu">efinn@college.harvard.edu</a></p>
-              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600">Notes (TBD)</span></div>
+              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600" > <a class = "text-red-700 hover:underline" href="https://github.com/LunchAndLearnKempner/lunchandlearnKempner.github.io/blob/main/Intro%20to%20Diffusion%20Models.pdf"> Notes</a> </span></div>
             </article>
 
             <!-- 02/10/25 -->
@@ -165,7 +165,7 @@
               </div>
               <h3 class="mt-4 text-lg font-semibold">Test Time Compute</h3>
               <p class="mt-2 text-sm text-gray-700">Emmanuel Rassou — <a class="text-red-700 hover:underline" href="mailto:emmanuel_rassou@college.harvard.edu">emmanuel_rassou@college.harvard.edu</a></p>
-              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600">Notes (TBD)</span></div>
+              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600" > <a class = "text-red-700 hover:underline" href="https://docs.google.com/document/d/1k1rVvTSP2ARrQHIpa6N7NBXJODjo9Fn1Oe098h8Pxbg/edit?tab=t.0#heading=h.1qyclw70l98h">Notes</a> </span></div>
             </article>
 
             <!-- 03/11/25 -->
@@ -175,7 +175,7 @@
               </div>
               <h3 class="mt-4 text-lg font-semibold">Dendritic Computation</h3>
               <p class="mt-2 text-sm text-gray-700">Ilenna Jones — <a class="text-red-700 hover:underline" href="mailto:ijones@g.harvard.edu">ijones@g.harvard.edu</a></p>
-              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600">Notes (TBD)</span></div>
+              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600" > <a class = "text-red-700 hover:underline" href="https://github.com/LunchAndLearnKempner/lunchandlearnKempner.github.io/blob/main/20250311-Dendritic_Computation_IlennaJones.pdf">Notes</a> </span></div>
             </article>
 
             <!-- 04/08/25 -->
@@ -228,7 +228,7 @@
               </div>
               <h3 class="mt-4 text-lg font-semibold">Creativity in Diffusion</h3>
               <p class="mt-2 text-sm text-gray-700">Emma Finn — <a class="text-red-700 hover:underline" href="mailto:efinn@college.harvard.edu">efinn@college.harvard.edu</a></p>
-              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600">Notes (TBD)</span></div>
+              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600" > <a class = "text-red-700 hover:underline" href="https://github.com/LunchAndLearnKempner/lunchandlearnKempner.github.io/blob/main/Intro%20to%20Creativity%20in%20Diffusion%20Models%20(2).pdf">Notes</a> </span></div>
             </article>
 
             <!-- 07/02/25 -->
@@ -239,8 +239,8 @@
               <h3 class="mt-4 text-lg font-semibold">A Friendly Guide to Random Matrix Theory and Its Application</h3>
               <p class="mt-2 text-sm text-gray-700">Binxu Wang — <a class="text-red-700 hover:underline" href="mailto:binxu_wang@hms.harvard.edu">binxu_wang@hms.harvard.edu</a></p>
               <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600"> 
-              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600" > <a class = "text-red-700 hover:underline" href="https://colab.research.google.com/drive/1PueRWWmo4_zErdZpQPQo1wfRZD7qFYzE?usp=sharing">Collab Notebook</a> 
-                and <a class = "text-red-700 hover:underline" href="https://colab.research.google.com/drive/1PueRWWmo4_zErdZpQPQo1wfRZD7qFYzE?usp=sharing"> tutorial notes </a> </span></div>
+              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600" > <a class = "text-red-700 hover:underline" href="https://colab.research.google.com/drive/1PueRWWmo4_zErdZpQPQo1wfRZD7qFYzE?usp=sharing">Code and</a> 
+                and <a class = "text-red-700 hover:underline" href="https://github.com/LunchAndLearnKempner/lunchandlearnKempner.github.io/blob/main/RMT_SilversteinEquation_tutorials.pdf"> notes </a> </span></div>
               </span></div>
             </article>
 
