--- a/index.html
+++ b/index.html
@@ -238,10 +238,13 @@
               </div>
               <h3 class="mt-4 text-lg font-semibold">A Friendly Guide to Random Matrix Theory and Its Application</h3>
               <p class="mt-2 text-sm text-gray-700">Binxu Wang — <a class="text-red-700 hover:underline" href="mailto:binxu_wang@hms.harvard.edu">binxu_wang@hms.harvard.edu</a></p>
-              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600"> 
-              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600" > <a class = "text-red-700 hover:underline" href="https://colab.research.google.com/drive/1PueRWWmo4_zErdZpQPQo1wfRZD7qFYzE?usp=sharing">Code and</a> 
-                and <a class = "text-red-700 hover:underline" href="https://github.com/LunchAndLearnKempner/lunchandlearnKempner.github.io/blob/main/RMT_SilversteinEquation_tutorials.pdf"> notes </a> </span></div>
-              </span></div>
+              <div class="mt-4 pt-4 border-t">
+              <div class="inline-flex items-center px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-700 space-x-2">
+                <a class="text-red-700 hover:underline" target="_blank" rel="noopener" href="https://colab.research.google.com/drive/1PueRWWmo4_zErdZpQPQo1wfRZD7qFYzE?usp=sharing">Code</a>
+                <span>and</span>
+              <a class="text-red-700 hover:underline" target="_blank" rel="noopener" href="https://github.com/LunchAndLearnKempner/lunchandlearnKempner.github.io/blob/main/RMT_SilversteinEquation_tutorials.pdf">Notes</a>
+              </div>
+              </div> 
             </article>
 
             <!-- 07/16/25 -->
