--- a/index.html
+++ b/index.html
@@ -39,7 +39,28 @@
         </nav>
       </div>
     </header>
+<!-- Photo strip (3 visible, auto-rotates) -->
+<section class="max-w-6xl mx-auto px-6 pt-6">
+  <div id="photo-strip"
+       class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4"
+       aria-label="Photo carousel">
+    <!-- 3 “slots” the script will fill -->
+    <img class="w-full h-48 sm:h-56 md:h-64 object-cover rounded-xl shadow" alt="">
+    <img class="w-full h-48 sm:h-56 md:h-64 object-cover rounded-xl shadow" alt="">
+    <img class="w-full h-48 sm:h-56 md:h-64 object-cover rounded-xl shadow" alt="">
+  </div>
 
+  <div class="mt-3 flex items-center justify-between">
+    <button id="photos-prev"
+            class="px-3 py-1.5 rounded-lg bg-gray-200 hover:bg-gray-300 text-gray-800 text-sm"
+            type="button">‹ Prev</button>
+    <span id="photos-counter" class="text-sm text-gray-600"></span>
+    <button id="photos-next"
+            class="px-3 py-1.5 rounded-lg bg-gray-200 hover:bg-gray-300 text-gray-800 text-sm"
+            type="button">Next ›</button>
+  </div>
+</section>
+    
     <main class="max-w-6xl mx-auto px-6 py-10">
       <!-- About / Call to action -->
       <section class="mb-10">
@@ -432,5 +453,59 @@
       // tiny helper to keep the year current
       document.getElementById('year').textContent = new Date().getFullYear();
     </script>
+    <script>
+  // 1) Put your 7 image paths + alt text here
+  const PHOTOS = [
+    { src: 'LnLpic1.jpg', alt: 'Lunch & Learn 1' },
+    { src: 'LnLpic2.jpg', alt: 'Lunch & Learn 2' },
+    { src: 'LnLpic3.jpg', alt: 'Lunch & Learn 3' },
+    { src: 'LnLpic4.jpg', alt: 'Lunch & Learn 4' },
+    { src: 'LnLpic5.jpg', alt: 'Lunch & Learn 5' },
+    { src: 'LnLpic6.jpg', alt: 'Lunch & Learn 6' },
+    { src: 'LnLpic7.jpg', alt: 'Lunch & Learn 7' },
+  ];
+
+  // 2) Basic “3-at-a-time” rotator
+  const slots = Array.from(document.querySelectorAll('#photo-strip img'));
+  const counter = document.getElementById('photos-counter');
+  let start = 0, timer = null, STEP_MS = 3500;
+
+  function render() {
+    for (let k = 0; k < slots.length; k++) {
+      const idx = (start + k) % PHOTOS.length;
+      const p = PHOTOS[idx];
+      const img = slots[k];
+      img.src = p.src;
+      img.alt = p.alt || '';
+    }
+    const first = (start % PHOTOS.length) + 1;
+    const last = ((start + slots.length - 1) % PHOTOS.length) + 1;
+    counter.textContent = `${first}–${last} / ${PHOTOS.length}`;
+  }
+
+  function next() { start = (start + 1) % PHOTOS.length; render(); }
+  function prev() { start = (start - 1 + PHOTOS.length) % PHOTOS.length; render(); }
+
+  function startAuto() { timer = setInterval(next, STEP_MS); }
+  function stopAuto()  { clearInterval(timer); timer = null; }
+
+  // Controls
+  document.getElementById('photos-next').addEventListener('click', () => { next(); stopAuto(); startAuto(); });
+  document.getElementById('photos-prev').addEventListener('click', () => { prev(); stopAuto(); startAuto(); });
+
+  // Pause on hover
+  const strip = document.getElementById('photo-strip');
+  strip.addEventListener('mouseenter', stopAuto);
+  strip.addEventListener('mouseleave', startAuto);
+
+  // Keyboard arrows
+  window.addEventListener('keydown', (e) => {
+    if (e.key === 'ArrowRight') { next(); stopAuto(); startAuto(); }
+    if (e.key === 'ArrowLeft')  { prev(); stopAuto(); startAuto(); }
+  });
+
+  render(); startAuto();
+</script>
+
   </body>
 </html>
