fixed broken formatting

--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
               </div>
               <h3 class="mt-4 text-lg font-semibold">neural manifolds, intuitions and applications</h3>
               <p class="mt-2 text-sm text-gray-700">David Behery — <a class="text-red-700 hover:underline" href="mailto:davidbehery@g.harvard.edu">davidbehery@g.harvard.edu</a></p>
-              <div class="mt-4 pt-4 border-t"><span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600"><a class = "text-red-700 hover:underline" href="https://github.com/LunchAndLearnKempner/lunchandlearnKempner.github.io/blob/main/dbehery-neural manifolds, intuitions, and applications.zip">Notes</span></div>
+              <div class="mt-4 pt-4 border-t">
+                <span class="inline-flex px-3 py-2 rounded-lg text-sm bg-gray-200 text-gray-600">
+                  <a class="text-red-700 hover:underline" href="https://github.com/LunchAndLearnKempner/lunchandlearnKempner.github.io/blob/main/dbehery-neural manifolds, intuitions, and applications.zip">Notes</a>
+                </span>
+              </div>
             </article>
 
             <!-- 09/09/25 -->
